# FoodSafetyIntelligence

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  app.py  docker-compose.yml  notes.md  pyproject.toml
data/: ui_options.json
data/discovery/: discovery_report.json
data/evaluation/cache/: fic_labelling_general_run_001.json  fic_labelling_general_run_002.json  fic_labelling_general_run_003.json  fic_labelling_general_run_004.json  fic_labelling_general_run_005.json  (+18 more)
data/indexes/: build_summary.json  cross_references.json  defined_terms.json  entity_stats.json
data/vectorstore/: metadata.json
models/all-MiniLM-L6-v2-onnx/: tokenizer_config.json
planning/: comprehensivePlan.md
scripts/: export_onnx_model.py  extract_ui_options.py  run_extraction_scenarios.py  run_failure_analysis.py  visualise_embeddings.py
src/: __main__.py  api.py  pipeline.py
src/evaluation/: failure_analysis.py  matching.py  metrics.py  schemas.py
src/extraction/: entity_extractor.py  llm_extractor.py  schemas.py
src/indexing/: onnx_embedder.py  vector_store.py
src/ingestion/: corpus.py  eurlex_discovery.py  eurlex_downloader.py  html_parser.py
src/retrieval/: chunking.py  cross_references.py  routing.py
tests/: test_api.py  test_chunking.py  test_corpus.py  test_cross_references.py  test_discovery.py  test_downloader.py  test_entity_extractor.py  test_eval_extraction.py  test_evaluation.py  test_extraction.py  test_failure_analysis.py  test_matching.py  test_onnx_embedder.py  test_parser.py  test_pipeline.py  test_routing.py  test_vector_store.py
(+5 files in other folders)
