[project]
name = "eu-food-regulatory-intelligence"
version = "0.1.0"
description = "Automated compliance checklist generation for EU food safety regulations"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "requests>=2.31",
    "pydantic>=2.0",
    "sentence-transformers>=4.0",
    "numpy>=2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
    "ignore::bs4.XMLParsedAsHTMLWarning",
]
